@@ -16,8 +16,10 @@ Version 1.0.8.6
   -  Added language files
      * Clojure (Jess Johnson)
      * F# (Julien Ortin)
+     * Logtalk (Paulo Moura)
      * NewLisp (cormullion)
      * SystemVerilog (Sean O'Boyle)
+  -  Reworked parts of the number support (BenBE)
   -  Improvements to language fiels (BenBE)
      * Fixed broken links in R/S+ language file (BenBE)
      * Fixed an issue with if= argument for dd command (BenBE)
